<resources>
    <string name="app_name">Tarea1</string>
    <string name="action_settings">Settings</string>
    <string name="username_hint">Ingrese su nombre</string>
    <string name="phone_hint">Ingrese su telefono</string>
    <string name="scholarship_text">Escolaridad</string>
    <string name="gender_text">Genero</string>
    <string name="fav_book_text">Libro Favorito</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_clear">Limpiar</string>
    <string name="checkbox_sports">Practica Deporte</string>
    <string name="rad_female">Femenino</string>
    <string name="rad_male">Masculino</string>
    <string-array name="scholarships">
        <item>Bachillerato</item>
        <item>Tecnico</item>
        <item>Licenciatura</item>
        <item>Maestria</item>
        <item>Doctorado</item>
    </string-array>

</resources>
