<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMain"
    android:padding="@dimen/app_margin"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:layout_marginBottom="@dimen/bottom_margin"/>
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_hint"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scholarship_text"
                android:textSize="@dimen/text_size"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:textColor="@android:color/black"/>


            <Spinner
                android:id="@+id/scholarship_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/scholarships"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_text"
                android:textSize="@dimen/text_size"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:textColor="@android:color/black"/>



            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radio_group">
                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rad_male"
                    android:layout_weight="1"
                    android:onClick="updateRadio"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rad_female"
                    android:layout_weight="1"
                    android:onClick="updateRadio"/>
            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fav_book_text"
                android:textSize="@dimen/text_size"
                android:layout_marginBottom="@dimen/bottom_margin"/>

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/auto_complete"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/sports_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_sports" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/no_width"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="bottom">

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_clear"
                    android:onClick="showPrompt"
                     />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>